--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head class="page">
+  <head class="page__head">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="./img/favicon_io/site.webmanifest">
     <link rel="stylesheet" href="./css/style.min.css">
-    <title>Valorant</title>
+    <title>Valorant-desctop</title>
   </head>
   <body class="page__body">
     <main class="main__page">
@@ -37,7 +41,7 @@
             <div class="card-main-wrap"> 
               <div class="card-main">
                 <div class="card-main__header">
-                  <div class="card-main-triangl">
+                  <div class="card-main-triangle">
                     <object class="card-main-body__title" type="image/svg+xml" data="./img/cards-main/SVG/title-01.svg"></object>
                   </div>
                   <div class="card-main-insert"></div>
@@ -47,14 +51,18 @@
                 </div>
                 <div class="card-main-bottom">
                   <ul class="card-main-bottom__list"> 
-                    <li class="item"> <a class="card-main-bottom__link" href="#"> 
-                        <object class="card-main-bottom__image card-main-bottom__image-size-01" type="image/svg+xml" data="./img/cards-main/SVG/card-01-01.svg"></object></a></li>
-                    <li class="item"> <a class="card-main-bottom__link" href="#"> 
-                        <object class="card-main-bottom__image card-main-bottom__image-size-02" type="image/svg+xml" data="./img/cards-main/SVG/card-01-02.svg"></object></a></li>
-                    <li class="item"> <a class="card-main-bottom__link" href="#"> 
-                        <object class="card-main-bottom__image card-main-bottom__image-size-03" type="image/svg+xml" data="./img/cards-main/SVG/card-01-03.svg"></object></a></li>
-                    <li class="item"> <a class="card-main-bottom__link" href="#"> 
-                        <object class="card-main-bottom__image card-main-bottom__image-size-04" type="image/svg+xml" data="./img/cards-main/SVG/card-01-04.svg"></object></a></li>
+                    <li class="item"> 
+                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-01" src="./img/cards-main/SVG/card-01-01.svg" alt="skill"></button>
+                    </li>
+                    <li class="item"> 
+                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-02" src="./img/cards-main/SVG/card-01-02.svg" alt="skill"></button>
+                    </li>
+                    <li class="item"> 
+                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-03" src="./img/cards-main/SVG/card-01-03.svg" alt="skill"></button>
+                    </li>
+                    <li class="item"> 
+                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-04" src="./img/cards-main/SVG/card-01-04.svg" alt="skill"></button>
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -62,7 +70,7 @@
             <div class="card-main-wrap"> 
               <div class="card-main">
                 <div class="card-main__header">
-                  <div class="card-main-triangl">
+                  <div class="card-main-triangle">
                     <object class="card-main-body__title card-main-body__title-02" type="image/svg+xml" data="./img/cards-main/SVG/title-02.svg"></object>
                   </div>
                   <div class="card-main-insert"></div>
@@ -72,14 +80,18 @@
                 </div>
                 <div class="card-main-bottom">
                   <ul class="card-main-bottom__list"> 
-                    <li class="item"> <a class="card-main-bottom__link" href="#"> 
-                        <object class="card-main-bottom__image card-main-bottom__image-size-01" type="image/svg+xml" data="./img/cards-main/SVG/card-01-01.svg"></object></a></li>
-                    <li class="item"> <a class="card-main-bottom__link" href="#"> 
-                        <object class="card-main-bottom__image card-main-bottom__image-size-02" type="image/svg+xml" data="./img/cards-main/SVG/card-01-02.svg"></object></a></li>
-                    <li class="item"> <a class="card-main-bottom__link" href="#"> 
-                        <object class="card-main-bottom__image card-main-bottom__image-size-03" type="image/svg+xml" data="./img/cards-main/SVG/card-01-03.svg"></object></a></li>
-                    <li class="item"> <a class="card-main-bottom__link" href="#"> 
-                        <object class="card-main-bottom__image card-main-bottom__image-size-04" type="image/svg+xml" data="./img/cards-main/SVG/card-01-04.svg"></object></a></li>
+                    <li class="item"> 
+                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-01" src="./img/cards-main/SVG/card-02-01.svg" alt="skill"></button>
+                    </li>
+                    <li class="item"> 
+                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-02" src="./img/cards-main/SVG/card-02-02.svg" alt="skill"></button>
+                    </li>
+                    <li class="item"> 
+                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-03" src="./img/cards-main/SVG/card-02-03.svg" alt="skill"></button>
+                    </li>
+                    <li class="item"> 
+                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-04" src="./img/cards-main/SVG/card-02-04.svg" alt="skill"></button>
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -87,7 +99,7 @@
             <div class="card-main-wrap"> 
               <div class="card-main">
                 <div class="card-main__header">
-                  <div class="card-main-triangl">
+                  <div class="card-main-triangle">
                     <object class="card-main-body__title card-main-body__title-03" type="image/svg+xml" data="./img/cards-main/SVG/title-03.svg"></object>
                   </div>
                   <div class="card-main-insert"></div>
@@ -97,14 +109,18 @@
                 </div>
                 <div class="card-main-bottom">
                   <ul class="card-main-bottom__list"> 
-                    <li class="item"> <a class="card-main-bottom__link" href="#"> 
-                        <object class="card-main-bottom__image card-main-bottom__image-size-01" type="image/svg+xml" data="./img/cards-main/SVG/card-01-01.svg"></object></a></li>
-                    <li class="item"> <a class="card-main-bottom__link" href="#"> 
-                        <object class="card-main-bottom__image card-main-bottom__image-size-02" type="image/svg+xml" data="./img/cards-main/SVG/card-01-02.svg"></object></a></li>
-                    <li class="item"> <a class="card-main-bottom__link" href="#"> 
-                        <object class="card-main-bottom__image card-main-bottom__image-size-03" type="image/svg+xml" data="./img/cards-main/SVG/card-01-03.svg"></object></a></li>
-                    <li class="item"> <a class="card-main-bottom__link" href="#"> 
-                        <object class="card-main-bottom__image card-main-bottom__image-size-04" type="image/svg+xml" data="./img/cards-main/SVG/card-01-04.svg"></object></a></li>
+                    <li class="item"> 
+                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-01" src="./img/cards-main/SVG/card-03-01.svg" alt="skill"></button>
+                    </li>
+                    <li class="item"> 
+                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-02" src="./img/cards-main/SVG/card-03-02.svg" alt="skill"></button>
+                    </li>
+                    <li class="item"> 
+                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-03" src="./img/cards-main/SVG/card-03-03.svg" alt="skill"></button>
+                    </li>
+                    <li class="item"> 
+                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-04" src="./img/cards-main/SVG/card-03-04.svg" alt="skill"></button>
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -112,7 +128,7 @@
             <div class="card-main-wrap"> 
               <div class="card-main">
                 <div class="card-main__header">
-                  <div class="card-main-triangl">
+                  <div class="card-main-triangle">
                     <object class="card-main-body__title card-main-body__title-04" type="image/svg+xml" data="./img/cards-main/SVG/title-04.svg"></object>
                   </div>
                   <div class="card-main-insert"></div>
@@ -122,14 +138,18 @@
                 </div>
                 <div class="card-main-bottom">
                   <ul class="card-main-bottom__list"> 
-                    <li class="item"> <a class="card-main-bottom__link" href="#"> 
-                        <object class="card-main-bottom__image card-main-bottom__image-size-01" type="image/svg+xml" data="./img/cards-main/SVG/card-01-01.svg"></object></a></li>
-                    <li class="item"> <a class="card-main-bottom__link" href="#"> 
-                        <object class="card-main-bottom__image card-main-bottom__image-size-02" type="image/svg+xml" data="./img/cards-main/SVG/card-01-02.svg"></object></a></li>
-                    <li class="item"> <a class="card-main-bottom__link" href="#"> 
-                        <object class="card-main-bottom__image card-main-bottom__image-size-03" type="image/svg+xml" data="./img/cards-main/SVG/card-01-03.svg"></object></a></li>
-                    <li class="item"> <a class="card-main-bottom__link" href="#"> 
-                        <object class="card-main-bottom__image card-main-bottom__image-size-04" type="image/svg+xml" data="./img/cards-main/SVG/card-01-04.svg"></object></a></li>
+                    <li class="item"> 
+                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-01" src="./img/cards-main/SVG/card-04-01.svg" alt="skill"></button>
+                    </li>
+                    <li class="item"> 
+                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-02" src="./img/cards-main/SVG/card-04-02.svg" alt="skill"></button>
+                    </li>
+                    <li class="item"> 
+                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-03" src="./img/cards-main/SVG/card-04-03.svg" alt="skill"></button>
+                    </li>
+                    <li class="item"> 
+                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-04" src="./img/cards-main/SVG/card-04-04.svg" alt="skill"></button>
+                    </li>
                   </ul>
                 </div>
               </div>
