--- a/app/index.html
+++ b/app/index.html
@@ -37,179 +37,85 @@
           </nav>
         </div>
         <div class="content"><img class="content__bg" src="./img/SVG/bg-title.svg" alt="text">
-          <div class="card-main-flex">
-            <div class="card-main-wrap"> 
-              <div class="card-main">
-                <div class="card-main__header">
-                  <div class="card-main-triangle">
-                    <object class="card-main-body__title" type="image/svg+xml" data="./img/cards-main/SVG/title-01.svg"></object>
+          <div class="skills-hero"><img class="skills-hero__img" src="./img/cards-main/PNG/Art-04.png" alt="hero">
+            <div class="container-content">
+              <div class="skills-hero-btn">
+                <button class="skills-hero-btn__button">exit </button>
+              </div>
+              <div class="box-card-content">
+                <div class="box-badge"> 
+                  <object class="box-badge__image" type="image/svg+xml" data="./img/cards-main/SVG/card-04-01.svg"></object>
+                  <div class="box-badge-text">
+                    <div class="box-badge-text__title">Basic </div>
+                    <div class="box-badge-text__subtitle">Slow Orb </div>
                   </div>
-                  <div class="card-main-insert"></div>
                 </div>
-                <div class="card-main-body">
-                  <div class="card-main-hero"><img class="card-main-hero__image" src="./img/cards-main/PNG/Art-01.png" alt="hero"></div>
-                </div>
-                <div class="card-main-bottom">
-                  <ul class="card-main-bottom__list"> 
-                    <li class="item"> 
-                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-01" src="./img/cards-main/SVG/card-01-01.svg" alt="skill"></button>
-                    </li>
-                    <li class="item"> 
-                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-02" src="./img/cards-main/SVG/card-01-02.svg" alt="skill"></button>
-                    </li>
-                    <li class="item"> 
-                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-03" src="./img/cards-main/SVG/card-01-03.svg" alt="skill"></button>
-                    </li>
-                    <li class="item"> 
-                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-04" src="./img/cards-main/SVG/card-01-04.svg" alt="skill"></button>
-                    </li>
-                  </ul>
+                <div class="box-card-content-description"> 
+                  <p class="box-card-content-description__text"><span class="box-card-content-description__span">Description:</span> Deals 240-800 true damage to an enemy hero (damage increases with level). This ability has a cooldown of 90 seconds.</p>
+                  <p class="box-card-content-description__text"><span class="box-card-content-description__span">Pro Tip:</span> Execute is often used to inflict additional damage on top of burst attack combos, or deliver decisive killing blows. This ability usually targets the enemy hero with the least amount of HP or the one closest to you. Alternatively, you can hold down the ability button for better targeting if there’s more than one enemy hero within your range.</p>
                 </div>
               </div>
-            </div>
-            <div class="card-main-wrap"> 
-              <div class="card-main">
-                <div class="card-main__header">
-                  <div class="card-main-triangle">
-                    <object class="card-main-body__title card-main-body__title-02" type="image/svg+xml" data="./img/cards-main/SVG/title-02.svg"></object>
-                  </div>
-                  <div class="card-main-insert"></div>
-                </div>
-                <div class="card-main-body">
-                  <div class="card-main-hero"><img class="card-main-hero__image" src="./img/cards-main/PNG/Art-02.png" alt="hero"></div>
-                </div>
-                <div class="card-main-bottom">
-                  <ul class="card-main-bottom__list"> 
-                    <li class="item"> 
-                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-01" src="./img/cards-main/SVG/card-02-01.svg" alt="skill"></button>
-                    </li>
-                    <li class="item"> 
-                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-02" src="./img/cards-main/SVG/card-02-02.svg" alt="skill"></button>
-                    </li>
-                    <li class="item"> 
-                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-03" src="./img/cards-main/SVG/card-02-03.svg" alt="skill"></button>
-                    </li>
-                    <li class="item"> 
-                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-04" src="./img/cards-main/SVG/card-02-04.svg" alt="skill"></button>
-                    </li>
-                  </ul>
-                </div>
+              <div class="skills-table">       
+                <ul class="skills-table-row">
+                  <li class="item"> 
+                    <button class="skills-table-row__item"><img class="skills-table-row__img" src="./img/cards-main/SVG/card-01-01.svg" alt="skill"></button>
+                  </li>
+                  <li class="item"> 
+                    <button class="skills-table-row__item"><img class="skills-table-row__img" src="./img/cards-main/SVG/card-01-02.svg" alt="skill"></button>
+                  </li>
+                  <li class="item"> 
+                    <button class="skills-table-row__item"><img class="skills-table-row__img" src="./img/cards-main/SVG/card-01-03.svg" alt="skill"></button>
+                  </li>
+                  <li class="item"> 
+                    <button class="skills-table-row__item"><img class="skills-table-row__img" src="./img/cards-main/SVG/card-01-04.svg" alt="skill"></button>
+                  </li>
+                  <li class="item"> 
+                    <button class="skills-table-row__item"><img class="skills-table-row__img" src="./img/cards-main/SVG/card-02-01.svg" alt="skill"></button>
+                  </li>
+                  <li class="item"> 
+                    <button class="skills-table-row__item"><img class="skills-table-row__img" src="./img/cards-main/SVG/card-02-02.svg" alt="skill"></button>
+                  </li>
+                  <li class="item"> 
+                    <button class="skills-table-row__item"><img class="skills-table-row__img" src="./img/cards-main/SVG/card-02-03.svg" alt="skill"></button>
+                  </li>
+                  <li class="item"> 
+                    <button class="skills-table-row__item"><img class="skills-table-row__img" src="./img/cards-main/SVG/card-02-04.svg" alt="skill"></button>
+                  </li>
+                </ul>
+                <ul class="skills-table-row">
+                  <li class="item"> 
+                    <button class="skills-table-row__item"><img class="skills-table-row__img" src="./img/cards-main/SVG/card-03-01.svg" alt="skill"></button>
+                  </li>
+                  <li class="item"> 
+                    <button class="skills-table-row__item"><img class="skills-table-row__img" src="./img/cards-main/SVG/card-03-02.svg" alt="skill"></button>
+                  </li>
+                  <li class="item"> 
+                    <button class="skills-table-row__item"><img class="skills-table-row__img" src="./img/cards-main/SVG/card-03-03.svg" alt="skill"></button>
+                  </li>
+                  <li class="item"> 
+                    <button class="skills-table-row__item"><img class="skills-table-row__img" src="./img/cards-main/SVG/card-03-04.svg" alt="skill"></button>
+                  </li>
+                  <li class="item"> 
+                    <button class="skills-table-row__item"><img class="skills-table-row__img" src="./img/cards-main/SVG/card-04-01.svg" alt="skill"></button>
+                  </li>
+                  <li class="item"> 
+                    <button class="skills-table-row__item"><img class="skills-table-row__img" src="./img/cards-main/SVG/card-04-02.svg" alt="skill"></button>
+                  </li>
+                  <li class="item"> 
+                    <button class="skills-table-row__item"><img class="skills-table-row__img" src="./img/cards-main/SVG/card-04-03.svg" alt="skill"></button>
+                  </li>
+                  <li class="item"> 
+                    <button class="skills-table-row__item"><img class="skills-table-row__img" src="./img/cards-main/SVG/card-04-04.svg" alt="skill"></button>
+                  </li>
+                </ul>
               </div>
-            </div>
-            <div class="card-main-wrap"> 
-              <div class="card-main">
-                <div class="card-main__header">
-                  <div class="card-main-triangle">
-                    <object class="card-main-body__title card-main-body__title-03" type="image/svg+xml" data="./img/cards-main/SVG/title-03.svg"></object>
-                  </div>
-                  <div class="card-main-insert"></div>
-                </div>
-                <div class="card-main-body">
-                  <div class="card-main-hero"><img class="card-main-hero__image" src="./img/cards-main/PNG/Art-03.png" alt="hero"></div>
-                </div>
-                <div class="card-main-bottom">
-                  <ul class="card-main-bottom__list"> 
-                    <li class="item"> 
-                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-01" src="./img/cards-main/SVG/card-03-01.svg" alt="skill"></button>
-                    </li>
-                    <li class="item"> 
-                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-02" src="./img/cards-main/SVG/card-03-02.svg" alt="skill"></button>
-                    </li>
-                    <li class="item"> 
-                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-03" src="./img/cards-main/SVG/card-03-03.svg" alt="skill"></button>
-                    </li>
-                    <li class="item"> 
-                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-04" src="./img/cards-main/SVG/card-03-04.svg" alt="skill"></button>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="card-main-wrap"> 
-              <div class="card-main">
-                <div class="card-main__header">
-                  <div class="card-main-triangle">
-                    <object class="card-main-body__title card-main-body__title-04" type="image/svg+xml" data="./img/cards-main/SVG/title-04.svg"></object>
-                  </div>
-                  <div class="card-main-insert"></div>
-                </div>
-                <div class="card-main-body">
-                  <div class="card-main-hero"><img class="card-main-hero__image" src="./img/cards-main/PNG/Art-04.png" alt="hero"></div>
-                </div>
-                <div class="card-main-bottom">
-                  <ul class="card-main-bottom__list"> 
-                    <li class="item"> 
-                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-01" src="./img/cards-main/SVG/card-04-01.svg" alt="skill"></button>
-                    </li>
-                    <li class="item"> 
-                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-02" src="./img/cards-main/SVG/card-04-02.svg" alt="skill"></button>
-                    </li>
-                    <li class="item"> 
-                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-03" src="./img/cards-main/SVG/card-04-03.svg" alt="skill"></button>
-                    </li>
-                    <li class="item"> 
-                      <button class="card-main-bottom__link"> <img class="card-main-bottom__image card-main-bottom__image-size-04" src="./img/cards-main/SVG/card-04-04.svg" alt="skill"></button>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="cards-description">
-            <div class="nameplate">
-              <div class="nameplate__header">
-                <div class="nameplate__triangle"></div>
-                <div class="nameplate__insert"></div>
-              </div>
-              <div class="nameplate__footer">
-                <div class="nameplate-text-inner">
-                  <h2 class="nameplate-text-inner__title">Basic</h2>
-                  <h3 class="nameplate-text-inner__subtitle">Slow Orb </h3>
-                  <p class="nameplate-text-inner__description">Cast out a radianite orb that breaks into a slowing field upon impact with the ground.</p>
-                </div>
-                <div class="nameplate-image"> <img class="nameplate-image__image" src="./img/PNG/em-01.png" alt="emblem"></div>
-              </div>
-            </div>
-            <div class="nameplate">
-              <div class="nameplate__header">
-                <div class="nameplate__triangle"></div>
-                <div class="nameplate__insert"></div>
-              </div>
-              <div class="nameplate__footer">
-                <div class="nameplate-text-inner">
-                  <h2 class="nameplate-text-inner__title">SIGNATURE</h2>
-                  <h3 class="nameplate-text-inner__subtitle">Healing Orb</h3>
-                  <p class="nameplate-text-inner__description">Heal an ally or yourself to full health over a few seconds.</p>
-                </div>
-                <div class="nameplate-image"> <img class="nameplate-image__image" src="./img/PNG/em-02.png" alt="emblem"></div>
-              </div>
-            </div>
-            <div class="nameplate">
-              <div class="nameplate__header">
-                <div class="nameplate__triangle"></div>
-                <div class="nameplate__insert"></div>
-              </div>
-              <div class="nameplate__footer">
-                <div class="nameplate-text-inner">
-                  <h2 class="nameplate-text-inner__title">ULTIMATE</h2>
-                  <h3 class="nameplate-text-inner__subtitle">Resurrection</h3>
-                  <p class="nameplate-text-inner__description">Target a friendly corpse. After a short delay, revive them with full health.</p>
-                </div>
-                <div class="nameplate-image"> <img class="nameplate-image__image" src="./img/PNG/em-03.png" alt="emblem"></div>
-              </div>
-            </div>
-            <div class="nameplate nameplate-btn">
-              <div class="nameplate__header">
-                <div class="nameplate__triangle"></div>
-                <div class="nameplate__insert"></div>
-              </div>
-              <div class="nameplate__footer"><img class="nameplate-image__image" src="./img/SVG/Polygon.svg" alt="triangle"></div>
             </div>
           </div>
         </div>
         <div class="footer"> </div>
       </section>
     </main>
+    <script src="https://unpkg.com/vue@next"></script>
     <script src="script/main.min.js"></script>
   </body>
 </html>
